frontend/static/css/style.css
/* ... */
.sidebar-nav .nav-item:active {
  background: rgba(190, 190, 185, 0.3);
  border-radius: 20px;
  color: black;
}

.sidebar-nav .logout {
  align-self: end;
  justify-self: end;
}

.sidebar-nav .current-project-text {
  flex-basis: 100%;
}

.sidebar-nav .current-project-text p:first-child {
  font-size: 12px;
  padding: 0px;
  margin: 0px;
  color: rgba(0, 0, 0, 0.69);
}

.sidebar-nav .current-project-text p:nth-child(2) {
  font-size: 14px;
  font-weight: bold;
  padding: 0px;
  margin: 0px;
  color: black;
}

/*------------------ View content */

.body-flex {
  display: flex;
  height: 90%;
}

.view-content {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  padding: 2rem;
  overflow-y: scroll;
  position: relative;
}

/* -----------------Home (Dashboard) */

.invitation-bottom-bar {
  width: 70%;
  height: 70px;
  position: absolute;
  background: #eeeee7;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  bottom: 0px;
  right: 50%;
  transform: translate(50%, 0%);
  display: flex;
  padding: 10px;
}

.invitation-bottom-bar .text-col {
  flex-basis: 90%;
}

.invitation-bottom-bar .code-generation-col {
  flex-basis: 10%;
}

.code-generation-button {
  border: 0px;
  width: 100%;
  height: 100%;
  font-size: 13px;
}

.invitation-modal-window {
  display: none;
}

.invitation-modal-body {
  background: white;
  border-radius: 20px;
  position: relative;
  max-width: 600px;
  width: 100%;
  min-height: 200px;
  padding: 20px;
}

/* -----------------Project-content */

.projects-col {
  position: relative;
  flex-basis: 12%;
}

.project-info-col {
  flex-basis: 44%;
}

.users-list-col {
  flex-basis: 44%;
}

.projects-header {
  padding: 7px 7px 10px 7px;
  border-bottom: rgba(99, 99, 99, 0.5) solid 2px;
  margin-bottom: 0px;
}

.project-container {
  display: flex;
  flex-wrap: wrap;
  background-color: var(--white);
  padding: 1rem;
  border-radius: 8px;
  width: 100%;
  min-height: 350px;
  margin-bottom: 1rem;
}

.project-container .col {
  box-shadow: rgba(99, 99, 99, 0.1) 0px 2px 8px 0px;
  padding: 1rem;
  height: 100%;
}

.project-list a {
  font-size: 12px;
  padding: 10px;
  margin-top: 10px;
}

.list-group-items {
  border-radius: 20px;
  border: 1px solid rgba(99, 99, 99, 0.1);
  color: black;
}

.project-list a:hover {
  background: rgba(0, 0, 0, 0.063);
}

.create-new-project-btn {
  width: 80%;
  display: flex;
  padding: 5px 0px;
  margin-bottom: 2rem;
  justify-content: center;
  align-items: center;
  border: 0px solid black;
  gap: 5px;
  bottom: 0;
  position: absolute;
}

.create-center {
  display: flex;
  justify-content: center;
}

.create-new-project-btn img {
  width: 23px;
}

.create-new-project-btn h5 {
  margin: 0px;
  font-weight: 300;
  font-size: 14px;
}

.modal-window {
  width: 100%;
  height: 100%;
  position: absolute;
  background: rgba(0, 0, 0, 0.2);
  top: 0px;
  left: 0px;
  z-index: 2;
  justify-content: center;
  align-items: center;
}

.create-new-project-window {
  background: white;
  border-radius: 20px;
  max-width: 1300px;
  width: 90%;
  height: 80%;
  padding: 20px;
  position: relative;
}

.create-new-project-window form {
  height: 100%;
}

.create-new-project-window .flex-container {
  display: flex;
  justify-content: space-between;
}

.create-new-project-window .form-group {
  margin-bottom: 20px;
}

.create-new-project-window .flex-col-left {
  flex-basis: 48%;
}

.create-new-project-window .flex-col-right {
  flex-basis: 48%;
}

.project-modal-window {
  display: none;
}

.close-modal {
  position: absolute;
  top: 0px;
  right: 0px;
  border: 0px solid rgba(255, 255, 255, 0);
  padding: 0px;
  margin: 0px;
  width: 10px;
  height: 10px;
  background: rgba(255, 255, 255, 0);
}

.close-modal img {
  position: absolute;
  top: 5px;
  right: 5px;
  width: 26px;
}

.list-group .active {
  border: black 0px solid;
  background-color: var(--tag-3);
}

.project-detail-table {
  display: flex;
  flex-wrap: wrap;
  font-size: 12px;
}

.project-detail-bigger-container {
  width: 100%;
  margin: 10px;
}

.project-detail-smaller-container {
  width: 45%;
  margin: 10px;
}

.project-detail-table div {
  outline: rgba(0, 0, 0, 0.16);
}

.project-detail-header {
  font-size: 1.5rem;
  font-weight: 500;
}

.attendant-list {
  font-size: 12px;
  color: black;
  margin-top: 10px;
  margin-left: 10px;
  margin-right: 10px;
  list-style-type: none;
}

.attendant-list-group-items {
  display: flex;
  flex: 1;
  align-items: center;
  padding: 5px;
  border-top: 1px solid rgba(99, 99, 99, 0.1);
  position: relative;
}

.attendant-list-item-delete {
  margin-left: 10px;
  padding: 2px 4px;
  background-color: var(--tag-4);
  color: var(--tag-4-text);
  border: none;
  border-radius: 10px;
  cursor: pointer;
  position: absolute;
  right: 15px;
  height: 80%;
  visibility: hidden;
}

.attendant-list li:hover > .attendant-list-item-delete {
  background: rgba(153, 77, 77, 0.063);
  visibility: visible;
}

/*----------------- Profile content */
.delete-button-container {
  display: flex;
  justify-content: center;
  align-items: center;
}
.delete-button {
  font-size: 12.5px;
  padding: 6px 10px;
  background: rgb(153, 1, 1);
  color: white;
  border-radius: 5px;
}

.profile-view .row {
  justify-content: center;
}

.user-name {
  font-size: large;
}

.user-role {
  font-size: medium;
  color: rgba(0, 0, 0, 0.5);
}

.password-switch-container {
  margin: 20px 0 5px;
}

.password-switch-container input {
  height: 2em;
  width: 4em !important;
}

.password-switch-container .form-check-label {
  position: relative;
  left: 10px;
  top: 5px;
}

.labels {
  font-size: 11px;
  margin-top: 10px;
}

.form-control:focus {
  box-shadow: none;
  border-color: #efd894;
}

.form-control {
  font-size: 11px;
  font-weight: 400;
  line-height: 2.5;
}

/* -----------------Tasks-content */

.create-task-modal-window {
  display: none;
}
/* ... */

